correction of vh on mobile

--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -91,19 +91,14 @@
   }
 }
 
-.mobile-container {
-//   position: absolute;
-//   width: 100%;
-//   height: 100vh;
-// }
-}
-
 .mobile {
   position: absolute;
   width: 100%;
-  height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
   top: 0;
   left: 0;
+  right: 0;
+  bottom: 0;
   z-index: 999;
   padding: var(--active-margin-grid) var(--active-margin-grid);
   background: var(--col-dark);
