--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -28,6 +28,7 @@
   --custom-ease-in-out: cubic-bezier(.42, 0, .31, 1);
   --x: 0;
   --y: 0;
+  --vh: 100vh;
 }
 
 @font-face {
